--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/scripts/app.js --bundle --outfile=public/scripts/app.js",
-    "dev": "esbuild src/scripts/app.js --bundle --outfile=public/scripts/app.js --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "js:build": "esbuild src/scripts/app.js --bundle --minify --outfile=public/scripts/app.js",
+    "js:dev": "esbuild src/scripts/app.js --bundle --outfile=public/scripts/app.js --watch",
+    "css:build": "npx @tailwindcss/cli -i src/styles/app.css -o public/styles/app.css --minify",
+    "css:dev": "npx @tailwindcss/cli -i src/styles/app.css -o public/styles/app.css --watch",
+    "build": "concurrently 'npm run js:build' 'npm run css:build'",
+    "dev": "concurrently 'npm run js:dev' 'npm run css:dev'"
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
+    "daisyui": "^5.0.50",
     "esbuild": "^0.25.8"
   },
   "dependencies": {
-    "alpinejs": "^3.14.9"
+    "@tailwindcss/cli": "^4.1.11",
+    "alpinejs": "^3.14.9",
+    "tailwindcss": "^4.1.11"
   }
 }
