--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "js:build": "esbuild src/scripts/app.js --bundle --minify --outfile=public/scripts/app.js",
     "js:dev": "esbuild src/scripts/app.js --bundle --outfile=public/scripts/app.js --watch",
-    "css:build": "npx @tailwindcss/cli -i src/styles/app.css -o public/styles/app.css --minify",
+    "css:build": "npx @tailwindcss/cli -i src/styles/app.css -o public/styles/app.css --minify",gi
     "css:dev": "npx @tailwindcss/cli -i src/styles/app.css -o public/styles/app.css --watch",
     "build": "concurrently 'npm run js:build' 'npm run css:build'",
     "dev": "concurrently 'npm run js:dev' 'npm run css:dev'"
@@ -30,6 +30,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
     "alpinejs": "^3.14.9",
+    "braintree-web-drop-in": "^1.45.1",
     "htmx.org": "^2.0.6",
     "tailwindcss": "^4.1.11"
   }
